CloudApp/APP/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudapp-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
  labels:
    app: cloudapp-tt
spec:
  ingressClassName: alb  # Esta es la clave, asigna la clase 'alb'
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cloudapp-tt-service
              port:
                number: 80
